--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -86,7 +86,7 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         uses: actions/delete-package-versions@v5
         with:
-          package-name: ${{ env.IMAGE_NAME }}
+          package-name: sanxt
           package-type: container
           min-versions-to-keep: 2
           num-old-versions-to-delete: 1
