chore: Add file includes configuration to biome.json, excluding `app/globals.css`.

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,8 @@
 		"useIgnoreFile": true
 	},
 	"files": {
-		"ignoreUnknown": false
+		"ignoreUnknown": false,
+		"includes": ["**/*", "!app/globals.css"]
 	},
 	"formatter": {
 		"enabled": true,
