--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -110,6 +110,6 @@ jobs:
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
-      - name: Trigger deploy webhook
-        if: ${{ github.event_name != 'pull_request' }}
-        run: curl -fsSL "${{ secrets.WEBHOOK }}"
+      #- name: Trigger deploy webhook
+      #  if: ${{ github.event_name != 'pull_request' }}
+      #  run: curl -fsSL "${{ secrets.WEBHOOK }}"
