--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -86,15 +86,20 @@ jobs:
         if: ${{ github.event_name != 'pull_request' && success() }}
         run: sleep 10
           
-      - name: Cleanup old GHCR images
+      - name: Cleanup old GHCR images and signatures
         if: ${{ github.event_name != 'pull_request' }}
         uses: actions/delete-package-versions@v5
         with:
           package-name: sanxt
           package-type: container
           min-versions-to-keep: 2
-          delete-only-untagged-versions: true
+          # This regex targets untagged images AND signature/attestation files
+          delete-only-untagged-versions: false
+          version-selection-strategy: 'older_than'
+          # This regex matches the standard Cosign signature/attestation format
+          version-name-extractions: '^(.*\.sig|.*\.att|.*sha256-.*)$' 
           token: ${{ secrets.CLEANUP_TOKEN || github.token }}
+
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
